# serenity-discord-bot

./: .gitignore  Cargo.toml  README.md  env-template.env
.github/workflows/: auto_release.yml  build_release.yml  build_release_linux.yml  discord-webhook-tester.yml
src/: main.rs
src/bot/: common.rs  constants.rs  mod.rs
src/bot/clients/: http.rs  mod.rs  yt_client.rs  yt_hub.rs
src/bot/commands/: album.rs  artist.rs  dont_spam.rs  join.rs  mod.rs  ping.rs  play.rs  playlist.rs  queue.rs  search.rs  set_volume.rs  skip.rs  stop.rs  yt_music_search.rs
src/bot/prettier/: mod.rs  pretty_aux_metadata.rs  pretty_channel.rs  pretty_playlist.rs  pretty_video.rs
src/bot/utils/: mod.rs  reaction_collector.rs
tips/: free-vps-host-guide.md
