[package]
name = "serenity-discord-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = [
    "macros",
    "rt-multi-thread",
    "signal",
] }
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"


[dependencies.serenity]
# git = "https://github.com/serenity-rs/serenity.git"
version = "0.12.0-rc"
features = ["client", "standard_framework", "voice","rustls_backend"]

[dependencies.songbird]
features = ["builtin-queue"]

[dependencies.symphonia]
version = "0.5.2"
features = ["aac", "mp3", "isomp4", "alac"]

[dependencies.reqwest]
version = "0.11"
